[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gstaccelerator"
version = "0.3.1"
description = "India GST API Client and MCP Server for AI Agents (HSN/SAC Rates)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "GST Accelerator", email = "hello@gstaccelerator.in" }
]
keywords = [
    "gst", "gstin", "hsn", "sac", "mcp-server", "fintech",
    "india-tax", "compliance", "model-context-protocol", "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting"
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "mcp>=0.1.0"
]

[project.urls]
Homepage = "https://gstaccelerator.in"
Documentation = "https://docs.gstaccelerator.in"
Repository = "https://github.com/thedivine1/gstaccelerator-python"
Changelog = "https://github.com/thedivine1/gstaccelerator-python/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/thedivine1/gstaccelerator-python/issues"

[project.scripts]
gstaccelerator-mcp = "gstaccelerator.mcp_server:main"
